@@ -165,6 +165,10 @@ usb 0x07b3 0x0403
 #model "UT16B"
 
 ##############################################################################
+# Autodetect Plustek OpticSlim M12
+usb 0x07b3 0x0412
+
+##############################################################################
 # Autodetect Plustek OpticSlim 1200
 usb 0x07b3 0x0413
 
